--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,15 @@ body {
 }
 /* Link Styles */
 
-a {
+a { 
   text-decoration: none;
   color: #999;
 }
 a:hover {
   color: #6633ff;
+}
+img {
+  max-width: 100%;
 }
 
 /* Section Styles */
